--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -407,7 +407,7 @@
                         To Create a New Marker , Click on the <b>Create New Marker</b> button and fill the form
                     </div><br>
                     <div>
-                        To Delete a Marker Select delete marker and choose your marker.
+                        To Delete or Edit a Marker Select Manage Marker and choose your marker.
                     </div><br>
                     <div>
                         To Export JSON data click on the <b>Export JSON</b> and select from "All" , "Only EHR" , "Only
