--- a/views/editmarker.ejs
+++ b/views/editmarker.ejs
@@ -83,6 +83,9 @@
                             <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0"
                                 target="_blank">CC
                                 3.0 BY</a></div>
+                                <div>
+                                    GeoCoding by <a href="https://wiki.openstreetmap.org/wiki/Nominatim"> OpenStreetMap Nominatim</a>
+                                </div>
                         <div>
                             All the LibreHealth icons used here are owned by <a href="http://librehealth.io/">LibreHealth</a>
                         </div>
