--- a/views/editmarker.ejs
+++ b/views/editmarker.ejs
@@ -24,7 +24,7 @@
     <!--Top navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container pr-0">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="/admin">
                 <!-- <img class="logo-navbar" src="https://cdn.glitch.com/505f7459-b656-4c9c-a527-12d817d4dbf1%2Flh-logo.png?1542948451528" alt="logo">  -->
                 <b style="color:white;">Edit Marker : #<%= mid %> </b>
             </a>
@@ -99,6 +99,9 @@
     </div>
     <br><br>
     <div class="container">
+            <div style="color: grey">
+                    <a href="/admin">Dashboard</a> / Manage / <a href="/admin/editmarker/<%= mid %>">#<%= mid %></a>
+                </div><br>
         <div class="card" style="padding: 10px;">
             <h2 class="card-heading text-center">
                 Edit Marker : <%= name %>
