--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -22,7 +22,7 @@
     <!--Top navbar -->
     <nav class="navbar navbar-expand-lg navbar-light nav-down">
         <div class="container pr-0">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="/admin">
                 <img class="logo-navbar" src="https://cdn.glitch.com/505f7459-b656-4c9c-a527-12d817d4dbf1%2Flh-logo.png?1542948451528"
                     alt="logo"> <b style="color:white;">Atlas</b>
             </a>
