--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -45,8 +45,8 @@ a.disabled {
     position: absolute;
     z-index: 999;
     /* margin-right: 5px; */
-    right:0%;
-    top: 25%;
+    right:1%;
+    bottom: 0.5%;
     max-width: 145px;
     background: #ffffff;
     opacity: 0.7;
